--- a/mentor.html
+++ b/mentor.html
@@ -444,7 +444,7 @@
 
             <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="team-item mb-4 mb-lg-0">
-                    <img src="assets/images/team/lee.png" alt="" class="img-fluid">
+                    <img src="assets/images/team/Lee.png" alt="" class="img-fluid">
                     <div class="team-info">
                         <h5>Lee</h5>
                         <p>伦敦大学学院 社会学 博士<br>
