--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/images/dark-logo.png" alt="Eduhash" class="img-fluid">
+                    <img src="assets/images/logo double.png" alt="Eduhash" class="img-fluid">
                 </a>
 
                 <!-- Toggler -->
@@ -648,7 +648,7 @@
 <!-- Testimonial section End -->
 
 <!-- CTA Sidebar start -->
-<section class="cta bg-gray section-padding">
+<!-- <section class="cta bg-gray section-padding">
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <div class="col-lg-7">
@@ -656,16 +656,16 @@
                     <span class="subheading">StudyLandsEdu</span>
                     <h3>OFFER战绩榜</h3>
                     <p class="mb-4">2023-2024年 节选</p>
-                    <!-- <a href="#" class="btn btn-main">Become Instructor</a> -->
-                </div>
+                    <a href="#" class="btn btn-main">Become Instructor</a> -->
+                <!-- </div>
             </div>
         </div>
     </div>
-</section>
+</section>  -->
 <!-- CTA Sidebar end -->
 
 <!-- Offer Showcase Section Start -->
-<section class="offer-showcase section-padding" >
+<!-- <section class="offer-showcase section-padding" >
     <div class="container">
         <div class="row">
             <div class="offer-gallery">
@@ -778,15 +778,13 @@
                     <img src="/assets/images/offer/44.png" alt="Offer 6" class="img-fluid">
                 </div>
             
-                <!-- Add more offer-item divs as needed -->
-            </div>
+               Add more offer-item divs as needed -->
+            <!-- </div>
         </div>
     </div>
-</section>
+</section> -->
 <!-- Offer Showcase Section END -->
 
-
-<br><br><br>
 
 <!-- Footer section start -->
 <section class="footer-2">
