--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/images/dark-logo.png" alt="Eduhash" class="img-fluid">
+                    <img src="assets/images/logo double.png" alt="Eduhash" class="img-fluid">
                 </a>
 
                 <!-- Toggler -->
