--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                             阿姆斯特丹大学 人工智能 全奖博士<br>
                             荷兰理学院 招生官<br>
                             澳门高校青年学联 理事长<br>
-                            中港澳教育文化交流协会 副会长
+                            <!-- 中港澳教育文化交流协会 副会长 -->
 
                         </div>
                         <div class="client-info">
