--- a/index.html
+++ b/index.html
@@ -502,12 +502,12 @@
                             阿姆斯特丹大学 人工智能 全奖博士<br>
                             荷兰理学院 招生官<br>
                             澳门高校青年学联 理事长<br>
-                            <!-- 中港澳教育文化交流协会 副会长 -->
+                            中港澳教育文化交流协会 副会长
 
                         </div>
                         <div class="client-info">
                             <div class="client-img">
-                                <img src="assets/images/clients/founder1.jpeg" alt="" class="img-fluid">
+                                <img src="assets/images/clients/SCR-20240816-rpoi.jpeg" alt="" class="img-fluid">
                             </div>
                             <div class="testionial-author">Evan Xu</div>
                         </div>
