--- a/mentor.html
+++ b/mentor.html
@@ -183,7 +183,8 @@
                         <p>阿姆斯特丹大学 计算机 硕士博士<br>
                         澳门科技大学 计算机 学士<br>
                         荷兰理学院 招生官<br>
-                        澳门高校青年学联 理事长
+                        澳门高校青年学联 理事长<br>
+                        中港澳教育文化交流协会 副会长
                     </p>
 
                         <ul class="team-socials list-inline">
