--- a/about.html
+++ b/about.html
@@ -169,8 +169,8 @@
                         <i class="flaticon-video-camera"></i>
                     </div>
                     <div class="feature-text">
-                        <h4>马来西亚私立大学招生办</h4>
-                        <p>授权负责国内的招生工作</p>
+                        <h4>马来西亚私立大学联合校方</h4>
+                        <p>林肯大学、精英大学、ALFA大学等</p>
                     </div>
                 </div>
             </div>
@@ -181,7 +181,7 @@
                     </div>
                     <div class="feature-text">
                         <h4>国内中外合办项目方</h4>
-                        <p>负责国内中外合办项目的招生工作</p>
+                        <p>1+3/2+2/3+1/4+0项目</p>
                     </div>
                 </div>
             </div>
@@ -458,7 +458,7 @@
           <div class="body">
             <p>搭建高端留学工作室</p>
             <ul>
-              <li>创始人为欧陆校区负责人</li>
+              <li>创始人欧洲校区负责人</li>
               <!-- <li>Exercitationem enim dolores sunt praesentium dolorum praesentium</li>
               <li>Modi aut dolores dignissimos sequi sit ut aliquid molestias deserunt illo</li> -->
             </ul>
