--- a/about.html
+++ b/about.html
@@ -2,11 +2,11 @@
 <html lang="zxx">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="description" content="Education LMS template by Dreambuzz">
-  <meta name="keywords" content="Eduhash,education,lms,seo,course,online,learning,caoch,training,tutor">
-  <meta name="author" content="themeturn.com">
+  <meta name="description" content="学屿教育StudyLandsEdu">
+  <meta name="keywords" content="StudyLandsEdu,学屿教育,education,留学,研究生,博士,本科,申请,欧陆,英国,美国,新加坡,欧洲,德国,荷兰,法国,澳洲,香港,澳门,港澳">
+  <meta name="author" content="studylandsedu.com">
 
-  <title>Eduhash - Education LMS template</title>
+  <title>学屿教育-专注名校本硕博留学申请</title>
 
   <!-- Mobile Specific Meta-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
