--- a/mentor.html
+++ b/mentor.html
@@ -180,7 +180,7 @@
                     <img src="assets/images/team/evan.png" alt="" class="img-fluid">
                     <div class="team-info">
                         <h5>Evan</h5>
-                        <p>阿姆斯特丹大学 计算机 硕士博士<br>
+                        <p>阿姆斯特丹大学 计算机 博士硕士<br>
                         澳门科技大学 计算机 学士<br>
                         荷兰理学院 招生官<br>
                         澳门高校青年学联 理事长<br>
@@ -234,7 +234,7 @@
                     <div class="team-info">
                         <h5>George</h5>
                         <p> ESSEC法国高等商学院 金融 硕士<br>
-                            ESCP欧洲高等商学院 金融 本科<br>
+                            ESCP欧洲高等商学院 金融 学士<br>
                             法语C1｜雅思总分8.0｜GMAT750<br>
                             就职于巴黎银行 企业金融
                         </p>
