--- a/mentor.html
+++ b/mentor.html
@@ -165,7 +165,7 @@
                 <div class="section-heading center-heading">
                     <span class="subheading">MENTOR representative</span>
                     <h3>导师代表</h3>
-                    <p>寻找与你“志趣相同”的学长学姐作为你的学科过来人
+                    <p>寻找与你“志趣相同”的学长学姐作为学科过来人
                         <br>
                         <br>
 
